fix config general

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,6 +26,7 @@
 @import './components/anything-llm.css';
 @import './components/ai-clients-tab.css';
 @import './components/security-settings.css';
+@import './components/general-settings.css';
 
 
 /* --- Pages --- */
