--- a/src/styles/components/general-settings.css
+++ b/src/styles/components/general-settings.css
@@ -250,7 +250,7 @@
 
 .general-section-title {
   margin: 0;
-  color: var(--text-color);
+  color: var(--ui-dialog-text) !important;
   font-size: 0.9375rem;
   font-weight: 600;
   letter-spacing: 0.02px;
@@ -375,7 +375,7 @@
 
 .general-setting-label {
   display: block;
-  color: var(--text-color);
+  color: var(--ui-dialog-text) !important;
   font-weight: 600;
   font-size: 0.9375rem;
   margin: 0;
@@ -484,7 +484,7 @@
 }
 
 .general-selector-title-compact {
-  color: var(--text-color);
+  color: var(--ui-dialog-text) !important;
   font-weight: 600;
   font-size: 0.9375rem;
   letter-spacing: 0.02px;
@@ -541,7 +541,7 @@
 }
 
 .general-selector-title span {
-  color: var(--text-color);
+  color: var(--ui-dialog-text) !important;
   font-weight: 600;
   font-size: 1rem;
   letter-spacing: 0.1px;
@@ -599,7 +599,7 @@
 }
 
 .general-icon-name {
-  color: var(--text-color);
+  color: var(--ui-dialog-text) !important;
   font-size: 0.875rem;
   font-weight: 500;
 }
